--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [functions]
-  external_node_modules = ["express", "@sparticuz/chromium"]
+  external_node_modules = ["express"]
   node_bundler = "esbuild"
 [[redirects]]
   force = true
